# pynomina

./: .gitignore  .pre-commit-config.yaml  README.md  nomina.py  pyproject.toml  test.py
migrations/: V1__Create_Table_Nomina_Funcionarios_Publicos.sql
src/python/: config.py  httpclient.py  logger.py  pipeline.py  postgres.py
